Too much simplyness + fixed an issue where image's link was bigger than image itself

--- a/css/style.css
+++ b/css/style.css
@@ -95,8 +95,10 @@ div.jalus {
     color: #DADADA;
 }
 
-.jalus img.sponsor {
+.jalus img.sponsor,
+.jalus a.sponsor {
     height: 10px;
+    display: inline-grid;
 }
 
 .jalus a img.sponsor:hover,
